--- a/SimiSoft/SimiSoft.csproj
+++ b/SimiSoft/SimiSoft.csproj
@@ -56,6 +56,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmFormasPago.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmFormasPago.Designer.cs">
+      <DependentUpon>frmFormasPago.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +86,12 @@
     <Compile Include="frmNMCliente.Designer.cs">
       <DependentUpon>frmNMCliente.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmNMFPago.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmNMFPago.Designer.cs">
+      <DependentUpon>frmNMFPago.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmNMProducto.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -91,6 +103,18 @@
     </Compile>
     <Compile Include="frmNMProveedor.Designer.cs">
       <DependentUpon>frmNMProveedor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmNVenta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmNVenta.Designer.cs">
+      <DependentUpon>frmNVenta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmPagos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmPagos.Designer.cs">
+      <DependentUpon>frmPagos.cs</DependentUpon>
     </Compile>
     <Compile Include="frmProductos.cs">
       <SubType>Form</SubType>
@@ -104,8 +128,17 @@
     <Compile Include="frmProveedores.Designer.cs">
       <DependentUpon>frmProveedores.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmVentas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmVentas.Designer.cs">
+      <DependentUpon>frmVentas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmFormasPago.resx">
+      <DependentUpon>frmFormasPago.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -118,17 +151,29 @@
     <EmbeddedResource Include="frmNMCliente.resx">
       <DependentUpon>frmNMCliente.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmNMFPago.resx">
+      <DependentUpon>frmNMFPago.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmNMProducto.resx">
       <DependentUpon>frmNMProducto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmNMProveedor.resx">
       <DependentUpon>frmNMProveedor.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmNVenta.resx">
+      <DependentUpon>frmNVenta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPagos.resx">
+      <DependentUpon>frmPagos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmProductos.resx">
       <DependentUpon>frmProductos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmProveedores.resx">
       <DependentUpon>frmProveedores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmVentas.resx">
+      <DependentUpon>frmVentas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -143,8 +188,10 @@
     </Compile>
     <None Include="App.config" />
     <None Include="Properties\DataSources\SimiSoft.BML.Cliente.datasource" />
+    <None Include="Properties\DataSources\SimiSoft.BML.FormaPago.datasource" />
     <None Include="Properties\DataSources\SimiSoft.BML.Producto.datasource" />
     <None Include="Properties\DataSources\SimiSoft.BML.Proveedor.datasource" />
+    <None Include="Properties\DataSources\SimiSoft.BML.Venta.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
